[241106] design: - 인풋 검증 상태 속성 추가 - 에러 메시지 추가

--- a/02-main_camp/Day41/src/app/_components/commons/input/styles.module.css
+++ b/02-main_camp/Day41/src/app/_components/commons/input/styles.module.css
@@ -8,6 +8,10 @@
   font-size: 1rem;
 }
 
+.error__input {
+  border: 0.125rem solid #f66a6a;
+}
+
 .input__header__container {
   display: flex;
   gap: 0.25rem;
@@ -31,7 +35,8 @@
   gap: 0.5rem;
 }
 
-.form__Input__container {
-  display: flex;
-  gap: 0.5rem;
+.error__message {
+  color: #f66a6a;
+  font-weight: 400;
+  font-size: 0.75rem;
 }
