--- a/main-app/src/app/globals.css
+++ b/main-app/src/app/globals.css
@@ -63,3 +63,7 @@ body.swal2-shown > [aria-hidden="true"] {
     transition: 0.1s filter;
     filter: blur(3px);
 }
+
+svg {
+    stroke-width: 1.5;
+}
