[241106] design: - 레이아웃 헤더의 로그인 버튼 컴포넌트 구현

--- a/02-main_camp/Day41/src/commons/ui/button/styles.module.css
+++ b/02-main_camp/Day41/src/commons/ui/button/styles.module.css
@@ -10,6 +10,29 @@
   font-size: 1.125rem;
 }
 
+.button__40__fill {
+  height: 2.5rem;
+  padding: 0.5rem 0.75rem;
+}
+
+.button__login {
+  height: 2.5rem;
+  padding: 0.5rem 0.75rem;
+
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  border-radius: 6.25rem;
+  background-color: black;
+}
+
+.button__login span {
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 0.875rem;
+}
+
 .button__disabled {
   background-color: #2974e5;
   opacity: 50%;
