--- a/my-app/src/components/purchase/purchase-write/styles.module.css
+++ b/my-app/src/components/purchase/purchase-write/styles.module.css
@@ -152,3 +152,82 @@
   font-weight: 500;
   line-height: 20px; /* 142.857% */
 }
+
+.imageArea {
+  margin-bottom: 40px;
+}
+
+.imageSection {
+  display: flex;
+  gap: 10px;
+}
+
+.moreImgBox {
+  width: 160px;
+  height: 160px;
+  border-radius: 8px;
+  background: var(--gray-50, #f2f2f2);
+}
+
+.addImageBox {
+  display: flex;
+  width: 160px;
+  height: 160px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+
+  border-radius: 8px;
+  background: var(--gray-50, #f2f2f2);
+}
+
+.plusIcon {
+  color: #777777;
+  font-size: 27px;
+  margin-bottom: 8px;
+}
+
+.addText {
+  color: var(--gray-600, #777);
+  line-height: 24px; /* 150% */
+}
+
+.buttonSection {
+  display: flex;
+  justify-content: flex-end;
+  gap: 16px;
+}
+
+.cancelBtn {
+  display: flex;
+  height: 48px;
+  padding: 12px 16px;
+  align-items: center;
+  gap: 8px;
+
+  border-radius: 8px;
+  border: 1px solid var(--gray-B, #000);
+  text-align: center;
+
+  font-size: 18px;
+
+  font-weight: 600;
+  line-height: 24px; /* 133.333% */
+}
+
+.submitBtn {
+  height: 48px;
+  margin-bottom: 40px;
+  padding: 12px 16px;
+  gap: 8px;
+  border-radius: 8px;
+  background: var(--gray-300, #c7c7c7);
+
+  color: var(--gray-100, #e4e4e4);
+  text-align: center;
+  font-size: 18px;
+
+  font-weight: 600;
+  line-height: 24px; /* 133.333% */
+}
