--- a/next_과제/src/components/header/index.module.scss
+++ b/next_과제/src/components/header/index.module.scss
@@ -25,11 +25,11 @@
   }
 
   .linkActive {
-    color: #000;
+    color: var(--text-color);
     font-weight: bold;
-    border-bottom: 2px solid #000;
+    border-bottom: 2px solid var(--text-color);
     span {
-      color: #000 !important;
+      color: var(--text-color) !important;
     }
   }
 
