--- a/FocusOn/src/commons/ui/button/styles.module.css
+++ b/FocusOn/src/commons/ui/button/styles.module.css
@@ -26,6 +26,17 @@
   transition: all 0.3s ease;
 }
 
+.button__soft__m__fit__border {
+  display: flex;
+  padding: 8px 16px;
+  align-items: center;
+  border-radius: 8px;
+  border: 1px solid var(--main-color);
+  background: white;
+  font-weight: 500;
+  color: var(--main-color);
+}
+
 .button_soft_m_full_main:hover {
   background-color: var(--main-color-hover);
 }
