--- a/FocusOn/src/commons/ui/link/styles.module.css
+++ b/FocusOn/src/commons/ui/link/styles.module.css
@@ -1,10 +1,11 @@
 .link__cancel {
   display: flex;
-  padding: 8px 16px;
+  padding: 12px 16px;
   align-items: center;
   border-radius: 8px;
   border: 1px solid var(--main-color);
   background: white;
-  font-weight: 500;
+  font-size: 18px;
+  font-weight: 600;
   color: var(--main-color);
 }
