[241110] other: 불필요한 코드 제거 및 컴포넌트 명 변경 - 콘솔 로그 제거 - 아이콘의 경우 이름 뒤에 Icon을 붙이도록 수정

--- a/02-main_camp/Day43/src/app/_components/commons/input/styles.module.css
+++ b/02-main_camp/Day43/src/app/_components/commons/input/styles.module.css
@@ -35,6 +35,11 @@
   gap: 0.5rem;
 }
 
+.form__input__container {
+  display: flex;
+  gap: 1rem;
+}
+
 .error__message {
   color: #f66a6a;
   font-weight: 400;
