--- a/my-app/src/components/purchase/purchase-detail/detail/styles.module.css
+++ b/my-app/src/components/purchase/purchase-detail/detail/styles.module.css
@@ -65,21 +65,21 @@
 
 .showImage {
   /* 너비 사이즈 문제 생기거나 맘에 안들면 이거 늘리기 */
-  width: 700px;
+  width: 630px;
   height: 450px;
   border-radius: 8px;
   background-color: lightcyan;
 }
 
 .priceAndPurchaseSection {
-  padding: 24px;
+  padding: 22px;
   border-radius: 8px;
   border: 1px solid var(--gray-100, #e4e4e4);
 }
 
 .price {
-  font-size: 24px;
-  font-weight: 700;
+  font-size: 22px;
+  font-weight: 600;
   line-height: 32px; /* 133.333% */
 }
 
@@ -117,7 +117,7 @@
 
 .sellerSection {
   display: flex;
-  margin-top: 29px;
+  margin-top: 24px;
   padding: 24px;
   flex-direction: column;
   gap: 12px;
@@ -147,4 +147,60 @@
   font-style: normal;
   font-weight: 500;
   line-height: 20px; /* 125% */
+}
+
+.underLine {
+  margin: 40px 0;
+  width: 630px;
+  height: 1px;
+  max-width: 844px;
+  background: var(--gray-200, #d4d3d3);
+}
+
+.contentsSection {
+  width: 630px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.contentsTitle {
+  color: var(--gray-800, #333);
+
+  /* b_20_28 */
+  font-family: Pretendard;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px; /* 140% */
+}
+
+.contnetsText {
+  color: var(--gray-800, #333);
+  font-weight: 400;
+  line-height: 28px;
+}
+
+/* ---------------------------- */
+
+.locationSection {
+  width: 630px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.locationTitle {
+  color: var(--gray-800, #333);
+
+  /* b_20_28 */
+  font-family: Pretendard;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px; /* 140% */
+}
+
+.locationBox {
+  width: 100%;
+  height: 250px;
+  background-color: lightcyan;
 }
