--- a/myhomework/day37/src/components/boards-wirte/styles.module.css
+++ b/myhomework/day37/src/components/boards-wirte/styles.module.css
@@ -179,21 +179,7 @@
   align-items: center;
 }
 
-.prevImage {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  border-radius: 8px;
-  transition: cubic-bezier(1, 0, 0, 1);
-}
-
-.deleteIcon {
-  display: block;
-  position: absolute;
-  width: 36px;
-  height: 36px;
-  justify-content: center;
-  align-items: center;
-  z-index: 4;
+.imgPreview {
+  width: 100px;
+  height: 100px;
 }
