feat: 로그인, 회원가입

--- a/new-project/src/app/globals.css
+++ b/new-project/src/app/globals.css
@@ -14,8 +14,17 @@
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--font-dohyeon) !important;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+
+  margin: 0;
+  padding: 0;
 }
