[241111]DAY48 필수과제제출_임윤정

--- a/homework/my-app/src/components/boards-list/banner/style.module.css
+++ b/homework/my-app/src/components/boards-list/banner/style.module.css
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: center;
 }
+
 .bannerContainer {
   width: 100%;
-  height: 487px;
-  flex-shrink: 0;
+  max-width: 80vw; /* 배너의 최대 너비 */
+  margin: 0 auto;
 }
