--- a/homework/my-app/src/app/store/[boardId]/style.module.css
+++ b/homework/my-app/src/app/store/[boardId]/style.module.css
@@ -26,7 +26,7 @@
 .mainImageContainer {
   position: relative;
   aspect-ratio: 1;
-  background-color: #f5f5f5;
+  background-color: var(--gray-300);
   border-radius: 0.5rem;
   overflow: hidden;
   min-height: 400px;
@@ -86,11 +86,13 @@
 .bookmarkButton {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
-  padding: 0.5rem;
+  gap: 0.3rem;
+  padding: 0.4rem;
   background: none;
   border: none;
   cursor: pointer;
+  background-color: var(--gray-300);
+  border-radius: 10px;
 }
 
 .bookmarkIcon {
@@ -217,7 +219,6 @@
 } */
 
 .accordionTitle {
-  padding: 1rem 0;
   font-weight: 500;
   cursor: pointer;
 }
