[241112] 메인캠프 과제제출 서준형

--- a/maincamp/my-app/src/components/boards-detail/detail/styles.module.css
+++ b/maincamp/my-app/src/components/boards-detail/detail/styles.module.css
@@ -73,7 +73,7 @@
 .videoBg{
     width:1280px;
     height:512px;
-    background-color:#f2f2f2;
+    /* background-color:#f2f2f2; */
     display:flex;
     justify-content:center;
     align-items:center;
