로그인 refresh토큰, 로그아웃구현

--- a/my-project/Day46/src/app/globals.css
+++ b/my-project/Day46/src/app/globals.css
@@ -23,7 +23,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: var(--BM), Arial, Helvetica, sans-serif;
+  font-family: var(--NSN), Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
