--- a/02-main_camp/Day43/src/app/travelproduct/[travelProductId]/styles.module.css
+++ b/02-main_camp/Day43/src/app/travelproduct/[travelProductId]/styles.module.css
@@ -102,10 +102,10 @@
   color: #5f5f5f;
   font-weight: 400;
   font-size: 0.875rem;
+  text-wrap: nowrap;
 }
 
 .buyingButton {
-  /* height: 3.25rem; */
   color: white;
 
   border-radius: 0.5rem;
