[241119] 트립토크 메인 페이지 구현함

--- a/src/commons/layout/navigation/styles.module.css
+++ b/src/commons/layout/navigation/styles.module.css
@@ -14,6 +14,10 @@
     gap: 16px;
 }
 
+.homeHeaderLeftTitle {
+    cursor: pointer;
+}
+
 .homeLogoutButtonBox {
     width: 100px;
     height: 40px;
