--- a/src/components/boards-list/list/styles.module.css
+++ b/src/components/boards-list/list/styles.module.css
@@ -1,3 +1,8 @@
+.layout_list_searchBox {
+    width: 1280px;
+    margin: 0 auto;
+}
+
 .layout_list {
     width: 100%;
     /* height: 656px; */
@@ -8,11 +13,7 @@
     flex-direction: column;
     align-items: center;
     gap: 8px;
-}
-
-.layout_list_searchBox {
-    width: 1184px;
-    margin: 0 auto;
+    padding: 24px 48px;
 }
 
 .trip_talk_title {
@@ -24,9 +25,9 @@
 .searchBox {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     border: none;
     align-items: center;
-    /* width: 1322px; */
     height: 75px;
     margin: 0 auto;
     gap: 16px;
@@ -73,64 +74,39 @@
     gap: 10px;
 }
 
-
 .titleBox {
-    width: 1184px;
+    width: 1160px;
     height: 44px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 24px 48px 8px 48px;
-    gap: 8px;
-    opacity: 0px;
+    /* border: 1px solid blue; */
+    padding: 16px 24px;
     font-size: 16px;
     font-weight: 500;
-    line-height: 20px;
-    border: 1px solid #f2f2f2;
+    gap: 8px;
 }
 
 .titleBoxNumber {
-    padding: 0 0 0 24px;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 20px;
-    text-align: center;
-    color: #1c1c1c;
+    width: 64px;
 }
 
 .titleBoxTitle {
-    padding: 0 0 0 8px;
     width: 848px;
-    height: 20px;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 20px;
     text-align: left;
-    color: #1c1c1c;
 }
 
 .titleBoxWrite {
-    padding: 0 0 0 8px;
     width: 100px;
-    height: 20px;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 20px;
-    text-align: center;
-    color: #1c1c1c;
+    text-align: left;
 }
 
 .titleBoxDate {
-    padding: 0 0 0 8px;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 20px;
-    text-align: center;
-    color: #1c1c1c;
+    width: 100px;
 }
 
 .boardListBox {
-    width: 1184px;
+    width: 1160px;
     height: 44px;
     display: flex;
     flex-direction: row;
@@ -140,6 +116,7 @@
     font-size: 16px;
     line-height: 20px;
     border: 1px solid #3a1a1a;
+    padding: 16px 24px;
 }
 
 .boardListBox:hover {
