--- a/src/components/boards-write/styles.module.css
+++ b/src/components/boards-write/styles.module.css
@@ -37,6 +37,7 @@
     border: 1px solid var(--gray-200, #d4d3d3);
     background: var(--Gray-W, #ffffff);
     border-radius: 8px;
+    padding: 20px;
 }
 
 .titleinput {
@@ -46,10 +47,15 @@
     opacity: 0px;
     border: 1px solid var(--gray-200, #d4d3d3);
     border-radius: 8px;
+    padding: 20px;
 }
 
 .contentsbox {
     padding: 40px 0;
+}
+
+.reactQuill {
+    height: 300px;
 }
 
 .contentstextarea {
@@ -106,6 +112,7 @@
     border: 1px solid var(--gray-200, #d4d3d3);
     margin-bottom: 8px;
     border-radius: 8px;
+    padding: 20px;
 }
 
 .addressdetailinput {
@@ -114,6 +121,7 @@
     opacity: 0px;
     border: 1px solid var(--gray-200, #d4d3d3);
     border-radius: 8px;
+    padding: 20px;
 }
 
 .addressinputbox {
@@ -133,6 +141,7 @@
     border: 1px 0px 0px 0px;
     opacity: 0px;
     border: 1px solid var(--Gray-Gray-200, #d4d3d3);
+    padding: 20px;
 }
 
 .photoBox {
