[241126] feat: 베스트 여행 상품 네비게이션 버튼 구현

--- a/02-main_camp/Day48/src/app/globals.css
+++ b/02-main_camp/Day48/src/app/globals.css
@@ -16,6 +16,11 @@ body {
   align-items: center;
 }
 
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  display: none;
+}
+
 @font-face {
   font-family: "Pretendard";
   font-weight: 700;
