[241127] Feat: 많은 이미지 등록 시 가로 스크롤기능 구현함

--- a/hybrid/web/src/app/soloplace-logs/new/styles.module.css
+++ b/hybrid/web/src/app/soloplace-logs/new/styles.module.css
@@ -23,7 +23,19 @@
 }
 
 .imageBox {
+    width: 100%;
     display: flex;
+    overflow-x: auto;
+}
+
+.imageBox::-webkit-scrollbar {
+    height: 0.4375rem; /* 세로 스크롤바의 높이 */
+}
+
+.imageBox::-webkit-scrollbar-track {
+    display: none;
+    background: orange;
+    border-radius: 0.5rem;
 }
 
 .showImage {
