수업 내용 파일 업로드

--- a/hybrid-app/class-web/src/app/globals.css
+++ b/hybrid-app/class-web/src/app/globals.css
@@ -14,6 +14,21 @@
   }
 }
 
+html {
+  /* 
+  피그마의 기본 가로를 360px 이라고 가정한다면 아래에 공식으로 비율에 맞는 font-size를 찾을수 있다. 
+  계산법 : 기준가로사이즈(360) : html기본폰트(16) = 내기계사이즈(100vw) : 조정폰트(x) 
+  360 : 16 = 100 : x
+  16 * 100 = 360 * x
+  360 * x = 1600
+  x = 1600 / 360
+  x = 160 / 36
+  x = 40 / 9
+  */
+  font-size: calc((40 / 9) * 1vw);
+  /* 360px 기준 16px, 430px 기준 19.1111px */
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
