--- a/hybrid-homework/web/src/commons/layout/global-header/styles.module.css
+++ b/hybrid-homework/web/src/commons/layout/global-header/styles.module.css
@@ -7,17 +7,17 @@
 .header {
   display: flex;
   width: 100%;
-  height: 48px;
+  height: 3rem;
   align-items: center;
-  gap: 8px;
+  gap: 0.5rem;
 }
 
 .title {
   overflow: hidden;
   text-overflow: ellipsis;
   font-family: "SUIT Variable";
-  font-size: 18px;
+  font-size: 1.125rem;
   font-style: normal;
   font-weight: 700;
-  line-height: 24px; /* 133.333% */
+  line-height: 1.5rem; /* 133.333% */
 }
