--- a/hybrid-homework/web/src/commons/ui/button/styles.module.css
+++ b/hybrid-homework/web/src/commons/ui/button/styles.module.css
@@ -1,15 +1,15 @@
 .button__soft__m__full {
   width: 100%;
   display: flex;
-  height: 48px;
-  padding: 12px 16px;
+  height: 3rem;
+  padding: 0.75rem 1rem;
   justify-content: center;
   align-items: center;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   background: #2974e5;
   color: #fff;
   text-align: center;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 700;
 }
 
