--- a/hybrid-homework/web/src/commons/ui/textarea/styles.module.css
+++ b/hybrid-homework/web/src/commons/ui/textarea/styles.module.css
@@ -9,7 +9,7 @@
   color: var(--Gray-800, #333);
   text-overflow: ellipsis;
   white-space: nowrap;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 500;
 }
 
