[241128] feat: html 폰트 사이즈 조정 - 다양한 모바일 사이즈에 대응할 수 있도록 비율늘리기를 적용

--- a/03-hybrid/project/web/src/app/globals.css
+++ b/03-hybrid/project/web/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-size: calc((40 / 9) * 1vw);
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
