[241128] feat: 플레이스 등록 - 사진 등록 시 좌우 스크롤 적용

--- a/03-hybrid/project/web/src/components/previewImage/styles.module.css
+++ b/03-hybrid/project/web/src/components/previewImage/styles.module.css
@@ -1,7 +1,10 @@
 .previewImage {
   position: relative;
   width: 6.25rem;
+  min-width: 6.25rem;
   height: 6.25rem;
+
+  border-radius: 0.5rem;
 }
 
 .previewImage button {
