--- a/hybrid-homework/web/src/commons/layout/header/styles.module.css
+++ b/hybrid-homework/web/src/commons/layout/header/styles.module.css
@@ -1,15 +1,12 @@
-.container {
-  display: flex;
-  width: 100%;
-  padding: 0 1.25rem;
-}
-
 .header {
+  position: fixed;
   display: flex;
+  padding: 0 1.25rem;
   width: 100%;
   height: 3rem;
   align-items: center;
   gap: 0.5rem;
+  z-index: 100;
 }
 
 .title {
