지도 컴포넌트 - 페이지이동 시 쿼리스트링으로 변환하여 이동, 맵 이동 시 주소 변환하여 샬로우 라우팅, 디바이스API 생성

--- a/hybrid-homework/web/src/commons/ui/input/styles.module.css
+++ b/hybrid-homework/web/src/commons/ui/input/styles.module.css
@@ -58,6 +58,10 @@
   border-radius: 0.5rem;
   border: 0.0625rem solid var(--gray-B, #000);
   background: var(--gray-w, #fff);
+
+  color: var(--gray-B, #000);
+  font-size: 0.875rem;
+  font-weight: 700;
 }
 
 .inputAddress::placeholder {
