--- a/hybrid-homework/web/src/components/commons/address-map/styles.module.css
+++ b/hybrid-homework/web/src/components/commons/address-map/styles.module.css
@@ -1,48 +1,25 @@
+.mapWrapper {
+  position: relative;
+  width: 100%;
+  height: calc(100% - 11rem); /* 지도 높이 계산 */
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+}
+
+/* 화면 중앙에 고정된 마커 */
 .marker {
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -100%);
   width: 1.5rem;
   height: 1.5rem;
-}
-
-.buttonContainer {
-  display: flex;
-  z-index: 1;
-  position: fixed;
-  bottom: 0;
-  flex: 1;
-  width: 100%;
-  padding: 1.25rem 1.25rem 2.5rem 1.25rem;
-  flex-direction: column;
-  gap: 1.25rem;
-  background-color: white;
-}
-
-.address {
-  display: flex;
-  padding: 0.75rem 1.25rem;
-  justify-content: center;
-  align-items: center;
-  gap: 0.625rem;
-  border-radius: 6.25rem;
-  background: var(--Gray-W, #fff);
-  box-shadow: 0rem 0rem 0.5rem 0rem rgba(0, 0, 0, 0.16);
-  color: var(--Gray-800, #333);
-  text-align: center;
-  font-style: normal;
-  font-weight: 600;
-}
-
-.button {
-  display: flex;
-  width: 100%;
-  height: 3rem;
-  padding: 0.75rem 1rem;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-  border-radius: 0.5rem;
-  background: #2974e5;
-  color: #fff;
-  text-align: center;
-  font-size: 1.125rem;
-  font-weight: 700;
+  background-size: cover;
+  pointer-events: none;
+  width: 1.5rem;
+  height: 1.5rem;
 }
