공통컴포넌트-인풋 제네릭타입적용

--- a/hybrid-homework/web/src/components/commons/input/styles.module.css
+++ b/hybrid-homework/web/src/components/commons/input/styles.module.css
@@ -41,12 +41,15 @@
   color: var(--gray-B, #000);
   font-size: 0.875rem;
   font-weight: 500;
-}
 
-.inputNormal::placeholder {
-  color: var(--Gray-Gray-400, #ababab);
-  font-size: 0.875rem;
-  font-weight: 500;
+  &::placeholder {
+    color: var(--Gray-Gray-400, #ababab);
+    font-size: 0.875rem;
+    font-weight: 500;
+  }
+  &:focus {
+    border: 1px solid var(--gray-600, #777);
+  }
 }
 
 .inputAddress {
