graphql 세팅 완료, 로그인, 회원가입 기능 완료

--- a/hybrid-homework/web/src/components/commons/input/styles.module.css
+++ b/hybrid-homework/web/src/components/commons/input/styles.module.css
@@ -65,10 +65,10 @@
   color: var(--gray-B, #000);
   font-size: 0.875rem;
   font-weight: 700;
-}
 
-.inputAddress::placeholder {
-  color: var(--gray-B, #000);
-  font-size: 0.875rem;
-  font-weight: 700;
+  &::placeholder {
+    color: var(--gray-B, #000);
+    font-size: 0.875rem;
+    font-weight: 700;
+  }
 }
