--- a/hybrid-homework/web/src/components/domains/mypages/styles.module.css
+++ b/hybrid-homework/web/src/components/domains/mypages/styles.module.css
@@ -1,12 +1,12 @@
 .container {
   display: inline-flex;
-  padding: 24px 20px 40px 20px;
+  padding: 1.5rem 1.25rem 2.5rem 1.25rem;
   flex-direction: column;
-  gap: 16px;
+  gap: 1rem;
 }
 
 .divider {
   width: 100%;
-  height: 1px;
+  height: 0.0625rem;
   background-color: #f2f2f2;
 }
