로그인 페이지, 스플래시 페이지 수정

--- a/hybrid-homework/web/src/commons/layout/header/styles.module.css
+++ b/hybrid-homework/web/src/commons/layout/header/styles.module.css
@@ -9,6 +9,14 @@
   z-index: 1100;
 }
 
+.logo {
+  display: flex;
+  width: 3.25rem;
+  height: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
 .title {
   overflow: hidden;
   text-overflow: ellipsis;
